Me falto eliminar un archivo innecesario, mejore la precision del calculo adaptativo, agrega un digito extra en los digitos despues del punto en los calculos y la vista.